# RotatingCubeOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
lib/: glfw3.lib
src/: glad.c  main.cpp
